Title and Position writing to the same field